Expandieren von Facetten

--- a/assets/css/proprietary.css
+++ b/assets/css/proprietary.css
@@ -61,6 +61,11 @@ span.titleCat {
 	display:none; 
 }
 
+/* Formatierung für die Facettierung */
+li.overhang {
+    display:none;
+}
+
 /* Formatierungen für WordClouds */	
 
 div#wordCloudButtons {
