Eingrenzen über Facetten

--- a/assets/css/proprietary.css
+++ b/assets/css/proprietary.css
@@ -65,6 +65,9 @@ span.titleCat {
 li.overhang {
     display:none;
 }
+a.facetLink {
+    color:#515151;
+    }
 
 /* Formatierungen für WordClouds */	
 
